cmake_minimum_required(VERSION 3.21.1)
project(CodingInterviews)

set(CMAKE_CXX_STANDARD 14 CACHE STRING "")

add_executable(JZ01 JZ01.cpp)
add_executable(JZ02 JZ02.cpp)
add_executable(JZ03 JZ03.cpp)
add_executable(JZ04 JZ04.cpp)
add_executable(JZ05 JZ05.cpp)
add_executable(JZ06 JZ06.cpp)
add_executable(JZ07 JZ07.cpp)
add_executable(JZ08 JZ08.cpp)