cmake_minimum_required(VERSION 3.21.1)
project(CodingInterviews)

set(CMAKE_CXX_STANDARD 14 CACHE STRING "")

add_executable(JZ01 JZ01.cpp)
add_executable(JZ02 JZ02.cpp)
add_executable(JZ03 JZ03.cpp)
add_executable(JZ04 JZ04.cpp)
add_executable(JZ05 JZ05.cpp)
add_executable(JZ06 JZ06.cpp)
add_executable(JZ07 JZ07.cpp)
add_executable(JZ08 JZ08.cpp)
add_executable(JZ09 JZ09.cpp)
add_executable(JZ10 JZ10.cpp)
add_executable(JZ11 JZ11.cpp)
add_executable(JZ12 JZ12.cpp)
add_executable(JZ13 JZ13.cpp)
add_executable(JZ14 JZ14.cpp)
add_executable(JZ15 JZ15.cpp)
add_executable(JZ16 JZ16.cpp)
add_executable(JZ17 JZ17.cpp)
add_executable(JZ18 JZ18.cpp)
add_executable(JZ19 JZ19.cpp)
add_executable(JZ20 JZ20.cpp)
add_executable(JZ21 JZ21.cpp)
add_executable(JZ22 JZ22.cpp)
add_executable(JZ23 JZ23.cpp)
add_executable(JZ24 JZ24.cpp)
add_executable(JZ25 JZ25.cpp)
add_executable(JZ26 JZ26.cpp)
add_executable(JZ27 JZ27.cpp)
add_executable(JZ28 JZ28.cpp)
add_executable(JZ29 JZ29.cpp)
add_executable(JZ30 JZ30.cpp)
add_executable(JZ31 JZ31.cpp)
add_executable(JZ32 JZ32.cpp)
add_executable(JZ33 JZ33.cpp)
add_executable(JZ34 JZ34.cpp)
add_executable(JZ35 JZ35.cpp)