cmake_minimum_required(VERSION 3.21.1)
project(CodingInterviews)

set(CMAKE_CXX_STANDARD 14 CACHE STRING "")

add_executable(JZ01 JZ01.cpp)
add_executable(JZ02 JZ02.cpp)
add_executable(JZ03 JZ03.cpp)
add_executable(JZ04 JZ04.cpp)
add_executable(JZ05 JZ05.cpp)
add_executable(JZ06 JZ06.cpp)
add_executable(JZ07 JZ07.cpp)
add_executable(JZ08 JZ08.cpp)
add_executable(JZ09 JZ09.cpp)
add_executable(JZ10 JZ10.cpp)
add_executable(JZ11 JZ11.cpp)
add_executable(JZ12 JZ12.cpp)
add_executable(JZ13 JZ13.cpp)
add_executable(JZ14 JZ14.cpp)
add_executable(JZ15 JZ15.cpp)
add_executable(JZ16 JZ16.cpp)
add_executable(JZ17 JZ17.cpp)
add_executable(JZ18 JZ18.cpp)
add_executable(JZ19 JZ19.cpp)
add_executable(JZ20 JZ20.cpp)
add_executable(JZ21 JZ21.cpp)
add_executable(JZ22 JZ22.cpp)
add_executable(JZ23 JZ23.cpp)
add_executable(JZ24 JZ24.cpp)
add_executable(JZ25 JZ25.cpp)
add_executable(JZ26 JZ26.cpp)
add_executable(JZ27 JZ27.cpp)
add_executable(JZ28 JZ28.cpp)
add_executable(JZ29 JZ29.cpp)
add_executable(JZ30 JZ30.cpp)
add_executable(JZ31 JZ31.cpp)
add_executable(JZ32 JZ32.cpp)
add_executable(JZ33 JZ33.cpp)
add_executable(JZ34 JZ34.cpp)
add_executable(JZ35 JZ35.cpp)
add_executable(JZ36 JZ36.cpp)
add_executable(JZ37 JZ37.cpp)
add_executable(JZ38 JZ38.cpp)
add_executable(JZ39 JZ39.cpp)
add_executable(JZ40 JZ40.cpp)
add_executable(JZ41 JZ41.cpp)
add_executable(JZ42 JZ42.cpp)
add_executable(JZ43 JZ43.cpp)
add_executable(JZ44 JZ44.cpp)
add_executable(JZ45 JZ45.cpp)
add_executable(JZ46 JZ46.cpp)
add_executable(JZ47 JZ47.cpp)
add_executable(JZ48 JZ48.cpp)
add_executable(JZ49 JZ49.cpp)
add_executable(JZ50 JZ50.cpp)
add_executable(JZ51 JZ51.cpp)
add_executable(JZ52 JZ52.cpp)
add_executable(JZ53 JZ53.cpp)
add_executable(JZ54 JZ54.cpp)
add_executable(JZ55 JZ55.cpp)
add_executable(JZ56 JZ56.cpp)
add_executable(JZ57 JZ57.cpp)
add_executable(JZ58 JZ58.cpp)
add_executable(JZ59 JZ59.cpp)
add_executable(JZ60 JZ60.cpp)
add_executable(JZ61 JZ61.cpp)
add_executable(JZ62 JZ62.cpp)
add_executable(JZ63 JZ63.cpp)
add_executable(JZ64 JZ64.cpp)
add_executable(JZ65 JZ65.cpp)
add_executable(JZ66 JZ66.cpp)

